Fix logo margin for better alignment in navigation

--- a/coffee.css
+++ b/coffee.css
@@ -23,4 +23,5 @@ body, html {
 .logo {
     width: 60px;
     height: 60px;
+    margin-top: auto;
 }
